[package]
name = "thesis"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2" 

[dependencies]
# the bevy framework and an extenion
bevy = { version = "0.13"}
bevy_prototype_lyon = "0.11"

# the logging framework and an extension
tracing = "0.1"
tracing-appender = "0.2"

# the data export framework and an extension
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

csv = { version = "1.3" }